@@ -1,4 +1,5 @@
 version 0.7.3 - currently working on
+- [#2704] Removed flexform options for HTML file and CSS file as they didn't work anyway
 - [#2513] Updated copyright lines to new mail address
 - [#2510] Updated copyright lines to 2009
 - [#2640] Fix: Hidden subparts caused some missing fields in the list view.
